<resources>
    <string name="app_name">StoryProject</string>
    <string name="Heading">The  Lion and the Man</string>
    <string name="play"> ▶️</string>
    <string name="stop"> ⏹️</string>
    <string name="content"> A Lion and a Man chanced to travel in a company through the forest.They soon began to quarrel, for each of them boasted that he and his kind were far superior to the other both in strength and mind.

Now they reached a clearing in the forest and there stood a statue. It was a representation of Heracles in the act of tearing the jaws of the Nemean Lion.


“See,” said the man, “that’s how strong we are! The King of Beasts is like wax in our hands!”



“Ho!” laughed the Lion, “a Man made that statue. It would have been quite a different scene had a Lion made it!”



        Moral: It all depends on the point of view, and who tells the story. Always trust your own wit and try judge the circumstances.
        </string>
    <string name="pig">The Pig and the Sheep</string>
    <string name="pigplay"> ▶️</string>
    <string name="pigstop"> ⏹️</string>
    <string name="pigcontent">
        One day a shepherd discovered a fat Pig in the meadow where his Sheep were pastured. He very quickly captured the porker, which squealed at the top of its voice the moment the Shepherd laid his hands on it. You would have thought, to hear the loud squealing, that the Pig was being cruelly hurt. But in spite of its squeals and struggles to escape, the Shepherd tucked his prize under his arm and started off to the butcher’s in the marketplace.

The Sheep in the pasture were much astonished and amused at the Pig’s behavior and followed the Shepherd and his charge to the pasture gate.

“What makes you squeal like that?” asked one of the Sheep. “The Shepherd often catches and carries off one of us. But we should feel very much ashamed to make such a terrible fuss about it like you do.”



“That is all very well,” replied the Pig, with a squeal and a frantic kick. “When he catches you he is only after your wool. But he wants my bacon! gree-ee-ee!”

Moral: It is easy to be brave when there is no danger. Don’t compare two different situations without understanding them.</string>
    <string name="wolf">The sheperd and the wolf</string>
    <string name="wolfplay"> ▶️</string>
    <string name="wolfstop"> ⏹️</string>
    <string name="wolfcontent"> A Shepherd Boy tended his master’s Sheep near a dark forest not far from the village. Soon he found life in the pasture very dull. All he could do to amuse himself was to talk to his dog or play on his shepherd’s pipe.

One day as he sat watching the Sheep and the quiet forest, and thinking what he would do should he see a Wolf, he thought of a plan to amuse himself. His Master had told him to call for help should a Wolf attack the flock, and the Villagers would drive it away. So now, though he had not seen anything that even looked like a Wolf, he ran toward the village shouting at the top of his voice, “Wolf! Wolf!”

As he expected, the Villagers who heard the cry dropped their work and ran in great excitement to the pasture. But when they got there they found the Boy doubled up with laughter at the trick he had played on them. A few days later the Shepherd Boy again shouted, “Wolf! Wolf!” Again the Villagers ran to help him, only to be laughed at again.



Then one evening as the sun was setting behind the forest and the shadows were creeping out over the pasture, a Wolf really did spring from the underbrush and fall upon the Sheep.

In terror the Boy ran toward the village shouting “Wolf! Wolf!” But though the Villagers heard the cry, they did not run to help him as they had before. “He cannot fool us again,” they said.

The Wolf killed a great many of the Boy’s sheep and then slipped away into the forest.

Moral: If you keep lying, no one will believe you even if you are speaking the truth. Always speak the truth</string>
    <string name="crane">The Wolf and the crane</string>
    <string name="craneplay"> ▶️</string>
    <string name="cranestop"> ⏹️</string>
    <string name="cranecontent"> A Wolf had been feasting too greedily, and a bone had stuck crosswise in his throat. He could get it neither up nor down, and of course, he could not eat a thing. Naturally, that was an awful state of affairs for a greedy Wolf.

So away he hurried to the Crane. He was sure that she, with her long neck and bill, would easily be able to reach the bone and pull it out. “I will reward you very handsomely”, said the Wolf, “if you pull that bone out for me”.

The Crane, as you can imagine, was very uneasy about putting her head in Wolf’s throat. But she was grasping in nature, so she did what the Wolf asked her to do. When the Wolf felt that the bone was gone, he started to walk away.



“But what about my reward!” called the Crane anxiously.

“What!” snarled the Wolf, whirling around. “Haven’t you got it? Isn’t it enough that I let you take your head out of my mouth without snapping it off?”

Moral: Expect no reward for serving the one who has no honor. Staying in a company of selfish people will not do anyone any favor.</string>
    <string name="wealth">Wealth without Value</string>
    <string name="wealthplay"> ▶️</string>
    <string name="wealthstop"> ⏹️</string>
    <string name="wealthcontent">A Miser had buried his gold in a secret place in his garden. Every day he went to the spot, dug up the treasure and counted it piece by piece to make sure it was all there. He made so many trips that a Thief, who had been observing him, guessed what it was the Miser had hidden, and one night quietly dug up the treasure and made off with it.

When the Miser discovered his loss, he was overcome with grief and despair. He groaned and cried and tore his hair. A passerby heard his cries and asked what had happened.

“My gold! O my gold!” cried the Miser, wildly, “someone has robbed me!”



“Your gold! There in that hole? Why did you put it there? Why did you not keep it in the house where you could easily get it when you had to buy things?”

“Buy!” screamed the Miser angrily. “Why, I never touched the gold. I couldn’t think of spending any of it.”

The stranger picked up a large stone and threw it into the hole. “If that is the case,” he said, “cover up that stone. It is worth just as much to you as the treasure you lost!”

Moral: Saving, Spending wisely and appropriately is a good sign if you do it for a good purpose. Otherwise, a possession is worth no more than the use we make of it.</string>
    <string name="sun">Why the sun and the moon</string>
    <string name="sunplay"> ▶️</string>
    <string name="sunstop"> ⏹️</string>
    <string name="suncontent">Many years ago, the sun and water were great friends, and they both lived on the earth togther. The sun very often used to visit the water, but the water never returned the visits.

At last the sun asked the water why he never visited. The water replied that the suns house was not big enough, and that if he came with all his people, he would drive the sun out of his home.

The water then said, If you want me to visit you, you will have to build a very large house. But I warn you that it will have to be very large, as my people are numerous and take up a lot of room.

The sun promised to build a very large house, and soon afterwards, he returned home to his wife, the moon, who greeted him with a broad smile.

The sun told the moon what he had promised the water, and the next day, they began building a large house to entertain the water and all his people.

When it was completed, the sun asked the water to come and visit him.

When the water arrived, one of his people called out to the sun, and asked him whether it would be safe for the water to enter, and the sun answered, Yes, tell my friend to come in.

The water began to flow in, followed by the fish and all the other water animals.

Very soon, the water was knee-deep in the house, so he asked the sun if it was still safe, and the sun again said, Yes, so more of them came in.

When the water was at the level of a mans head, the water said to the sun, Do you want more of my people to come

Not knowing any better, the sun and the moon both said, Yes,. More and more of the waters people came in, until the sun and the moon had to sit on top of the roof.

The water once again asked the sun if it was still okay to keep coming in. The sun and moon answered yes, so more and more of the waters people came in.

The water soon overflowed the top of the roof, and the sun and the moon were forced to go up into the sky.

‌…and they have been there ever since.
    </string>
    <string name="friend">The Two Friends</string>
    <string name="friendplay"> ▶️</string>
    <string name="friendstop"> ⏹️</string>
    <string name="hansel">Hansel and Gretel</string>
    <string name="hanselplay"> ▶️</string>
    <string name="hanselstop"> ⏹️</string>
    <string name="hanselcontent">A poor woodcutter and his wife had two children named Hansel and Gretel. Their mother died when they were young. Hansel and Gretel were very sad. Soon their father remarried but their stepmother was very cruel. One day, she took the children deep into the forest and left them there. Clever Hansel had some breadcrumbs in his pocket and had dropped them on the way so that they could find their way back home. Alas! The birds ate all the crumbs and they couldn’t find the path that led back home.

Hansel and Gretel went deeper and deeper into the forest. They were hungry and tired. Finally, after walking for a long time, they saw a cottage made of chocolate, candies, and cake. “Look, Hansel! A chocolate brick!” shouted

Gretel in delight and both ate it hungrily.
        Now, a wicked witch lived there. When she saw Hansel and Gretel, she wanted to eat them. She grabbed the children and locked them in a cage. The witch decided to make a soup out of Hansel and eat him first. She began boiling a huge pot of water for the soup. Just then, Gretel crept out of her cage. She gave the wicked witch a mighty push from behind and the witch fell into the boiling water. She howled in pain and died instantly. Hansel and Gretel found treasure lying around the cottage. They carried it home with them. Their stepmother had died and their father welcomed them back with tears of joy. They never went hungry again!
    </string>
</resources>